--- a/customer-fe/package.json
+++ b/customer-fe/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@arplash/shared": "*",
+    "@clerk/clerk-react": "^5.59.4",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.16.0",
     "react": "^19.2.0",
