--- a/customer-fe/package.json
+++ b/customer-fe/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "@arplash/customer-fe",
+  "name": "customer-fe",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.4",
-    "@arplash/shared": "*",
+    "@apollo/client": "^4.1.0",
     "@clerk/clerk-react": "^5.59.4",
-    "graphql": "^16.8.1",
-    "graphql-ws": "^5.16.0",
+    "@tanstack/react-router": "^1.151.2",
+    "graphql": "^16.12.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-hook-form": "^7.71.1",
+    "rxjs": "^7.8.2",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/router-plugin": "^1.151.2",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "@vitejs/plugin-react-swc": "^4.2.2",
-    "autoprefixer": "^10.4.19",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "npm:rolldown-vite@7.2.5",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
